
syntax = "proto2";

import "eco/signal_header.proto";

package pb.ap_common.vehicle_params;

message Vehicle_Params{
  optional uint32 uiVersionNumber = 2124;
  optional pb.eco.signal_header.SignalHeader sSigHeader = 1033;
  optional float AP_V_STEER_RATIO_NU = 3492;
  repeated float AP_V_STEER_LOOKUP_ST_WHL_RAD = 1390;
  repeated float AP_V_STEER_LOOKUP_IN_WHL_RAD = 2399;
  repeated float AP_V_STEER_LOOKUP_OUT_WHL_RAD = 3741;
  repeated float AP_V_STEER_LOOKUP_CTR_WHL_RAD = 2201;
  optional float AP_V_WHEELBASE_M = 1387;
  optional float AP_V_OVERHANG_REAR_M = 786;
  optional float AP_V_LENGTH_M = 3529;
  optional float AP_V_WIDTH_M = 1463;
  optional uint32 AP_V_WHEEL_NUMBER_OF_TEETH_NU = 440;
  optional float AP_V_TYRE_CIRCUMFERENCE_FRONT_M = 1586;
  optional float AP_V_TYRE_CIRCUMFERENCE_REAR_M = 3570;
  optional uint32 AP_V_NUM_STANDARD_SHAPE_PTS = 3477;
  repeated float AP_V_STANDARD_SHAPE_X_M = 2018;
  repeated float AP_V_STANDARD_SHAPE_Y_M = 210;
  optional uint32 AP_V_NUM_BOUNDING_PTS = 2644;
  repeated float AP_V_BOUNDINGBOX_X_M = 1071;
  repeated float AP_V_BOUNDINGBOX_Y_M = 799;
  optional float AP_V_TRACK_FRONT_M = 2405;
  optional float AP_V_TRACK_REAR_M = 299;
  optional uint32 AP_V_MIRROR_SHAPE_SIZE_NU = 3546;
  optional uint32 AP_V_HITCH_SHAPE_SIZE_NU = 3596;
  optional uint32 AP_V_WHEEL_SHAPE_SIZE_NU = 427;
  repeated float AP_V_LEFT_MIRROR_SHAPE_X_M = 3808;
  repeated float AP_V_LEFT_MIRROR_SHAPE_Y_M = 2512;
  repeated float AP_V_RIGHT_MIRROR_SHAPE_X_M = 1689;
  repeated float AP_V_RIGHT_MIRROR_SHAPE_Y_M = 425;
  repeated float AP_V_HITCH_SHAPE_X_M = 1908;
  repeated float AP_V_HITCH_SHAPE_Y_M = 68;
  repeated float AP_V_FL_WHEEL_SHAPE_X_M = 1899;
  repeated float AP_V_FL_WHEEL_SHAPE_Y_M = 91;
  repeated float AP_V_RL_WHEEL_SHAPE_X_M = 1331;
  repeated float AP_V_RL_WHEEL_SHAPE_Y_M = 515;
  repeated float AP_V_RR_WHEEL_SHAPE_X_M = 3694;
  repeated float AP_V_RR_WHEEL_SHAPE_Y_M = 2398;
  repeated float AP_V_FR_WHEEL_SHAPE_X_M = 3126;
  repeated float AP_V_FR_WHEEL_SHAPE_Y_M = 2822;
  optional float AP_V_MAX_STEER_ANG_VEL_RADPS = 2299;
  optional float AP_V_COMF_STEER_ANG_VEL_RADPS = 2964;
  optional float AP_V_STEER_ANG_TO_YAW_ANG_NU = 1748;
  repeated float AP_V_STEER_POLY_OUT_WHL_RAD = 582;
  repeated float AP_V_STEER_POLY_CTR_WHL_RAD = 1090;
  repeated float AP_V_STEER_POLY_IN_WHL_RAD = 2516;
  optional float AP_V_MAX_INFL_DIST_M = 2458;
}

message Vehicle_Params_array_port{
   repeated pb.ap_common.vehicle_params.Vehicle_Params data = 331;
}
