
syntax = "proto2";

import "eco/signal_header.proto";

package pb.mf_mempark.mem_park_params;

message MemParkParams{
  optional uint32 uiVersionNumber = 2124;
  optional pb.eco.signal_header.SignalHeader sSigHeader = 1033;
  optional bool functionActive_nu = 4064;
  optional float scanRoiHalfWidth_m = 3018;
  optional float scanRoiBackExtension_m = 1096;
  optional float scanRoiFrontExtension_m = 1099;
  optional uint32 minRequiredRelocalizationProb_perc = 913;
  optional float memParkDeveloperParam_0 = 295;
  optional float memParkDeveloperParam_1 = 262;
  optional float memParkDeveloperParam_2 = 357;
  optional float memParkDeveloperParam_3 = 324;
  optional float memParkDeveloperParam_4 = 419;
  optional float memParkDeveloperParam_5 = 386;
  optional float memParkDeveloperParam_6 = 481;
  optional float memParkDeveloperParam_7 = 448;
}

message MemParkParams_array_port{
   repeated pb.mf_mempark.mem_park_params.MemParkParams data = 1226;
}
