
syntax = "proto2";

import "eco/signal_header.proto";

package pb.si.si_params;

message SiParams{
  optional uint32 uiVersionNumber = 2124;
  optional pb.eco.signal_header.SignalHeader sSigHeader = 1033;
  optional bool isStaticObjectInputCCWOriented = 3131;
  optional float increaseOverhangLowObject_m = 3268;
  optional float coveredIntervalsRoiWidth_m = 1124;
  optional bool useLineMarkings = 814;
  optional bool treatUnknownCurbsideObjectsAsBodyTraversable = 2916;
  optional bool enableSlotIdentFromTrajectory = 3922;
  optional float slotIdentMaxYawDevParallel_rad = 2911;
  optional float slotIdentMaxDevFromStraightLine_m = 1973;
  optional bool enableSecondSideDelimiterOnlyScenario = 2565;
  optional bool enableFirstSideDelimiterOnlyScenario = 3069;
  optional bool preferSecondSideOSD = 3007;
  optional float osdSideRoiXFront_m = 3796;
  optional float osdSideRoiXBack_m = 2258;
  optional bool requiredCurbObjectForOneSideDelimitingSlots = 3005;
  optional float horizontalMovementLimitOfASlotSlotCoords_m = 1573;
  optional float maxAllowedVehCurbOverlapForPerp_m = 2010;
  optional float minCurbObjLengthForOneSideDel_m = 2932;
  optional bool allowNakedSlots = 953;
  optional bool requireAtLeastOneDelimitingObjectForNakedSlot = 1927;
  optional float maxRoadsideExtensionPerpendicular_m = 1711;
  optional float maxRoadsideExtensionParallel_m = 2888;
  optional float maxRoadsideExtensionAngular_m = 2854;
  optional float minAppliedRoadsideExtension_m = 2410;
  optional float minDistanceToObject_m = 2195;
  optional float minDistanceNoObject_m = 2244;
  optional bool enableAngularParking = 186;
  optional bool enableAngularRightOpeningTowardsBack = 3952;
  optional bool enableAngularRightOpeningTowardsFront = 2559;
  optional bool enableAngularLeftOpeningTowardsBack = 1303;
  optional bool enableAngularLeftOpeningTowardsFront = 290;
  optional bool enableAngularSlotBruteForceDetection = 2126;
  optional bool enableSlotPoseDetectionOnVirtualLines = 3996;
  optional float outlierDistSqrParallelSlot_m2 = 995;
  optional float outlierDistSqrNonParallelSlot_m2 = 1066;
  optional float slotReplacementDeltaOutlierDistSqr_m2 = 114;
  optional float angularParkingDetectionWindowAbsMin_m = 3522;
  optional float angularParkingDetectionWindowAbsMax_m = 2498;
  optional float angularSlotMaxDepthExtension_m = 3468;
  optional bool enableParallelSlots = 108;
  optional float parallelSlotLengthDeltaMin_m = 3571;
  optional float parallelSlotLengthDeltaModel_m = 484;
  optional float parallelSlotLengthDeltaMax_m = 2547;
  optional float parallelSlotWidthDeltaModel_m = 3876;
  optional float parallelSlotWidthDeltaMin_m = 847;
  optional float parallelSlotWidthDeltaMax_m = 1871;
  optional float parallelSlotOpeningDeltaMaxPark_m = 1588;
  optional float parallelSlotOpeningDeltaMinPark_m = 3760;
  optional float parallelSlotDepthDeltaMaxPark_m = 866;
  optional float parallelSlotDepthDeltaMinPark_m = 3046;
  optional bool enablePerpendicularSlots = 1404;
  optional float perpendicularSlotWidthDeltaMin_m = 1840;
  optional float perpendicularSlotWidthDeltaModel_m = 2495;
  optional float perpendicularSlotWidthDeltaMax_m = 816;
  optional float perpendicularSlotLengthDeltaModel_m = 215;
  optional float perpendicularSlotLengthDeltaMin_m = 2314;
  optional float perpendicularSlotLengthDeltaMax_m = 3338;
  optional float perpendicularSlotOpeningDeltaMaxPark_m = 3166;
  optional float perpendicularSlotOpeningDeltaMinPark_m = 1242;
  optional float perpendicularSlotDepthDeltaMaxPark_m = 1449;
  optional float perpendicularSlotDepthDeltaMinPark_m = 3373;
  optional bool enableGarageParkingSlots = 183;
  optional float garageParkingSlotWidthDeltaMin_m = 1972;
  optional float garageParkingSlotWidthDeltaMax_m = 948;
  optional float garageParkingSlotLengthDeltaMin_m = 2905;
  optional float garageParkingSlotLengthDeltaModel_m = 558;
  optional float garageParkingSlotLengthDeltaMax_m = 3929;
  optional float garageParkingSlotDoorAreaLength_m = 2119;
  optional float maxAllowedSlotOpeningOverlap_m = 468;
  optional bool preferWideSlots = 86;
  optional bool offerOverlappingSlots = 862;
  optional bool performOptimization = 2187;
  optional float shrinkSlotForNumericalInaccuracy_m = 672;
  optional float slotPositioningRoiLeftRightDelta_m = 28;
  optional float slotPositioningRoiRoadDelta_m = 1493;
  optional float slotEdgePullSearchDistFront_m = 2717;
  optional float maxDrivenRotationParallel_rad = 1962442;
  optional float maxDrivenRotationPerpendicular_rad = 161;
  optional float maxDrivenRotationGarage_rad = 2024;
  optional float maxDrivenRotationAngled_rad = 530;
  optional float slotDepthHorizontalLineAlignment_m = 483;
  optional bool enableSlotShrinkingBelowUsualSizeDuringTrack = 3315;
  optional bool invalidateOverlappingEstablishedSlots = 490;
  optional float weightCurbOrientation = 2143;
  optional float weightLineOrientation = 1980;
  optional float minCoveragePerSideNonPar_m = 779;
  optional bool enableSlotOrientationOnSideVLs = 1985;
  optional bool enableSlotOrientationOnWingVLs = 3521;
  optional float sideAlignmentROIWidth_m = 3637;
  optional float sideAlignmentWeight_mpr = 153;
  optional float wingAlignmentWeight_mpr = 2889;
  optional float minimumObstacleFittedLineLength_m = 888;
  optional float lineOrientationRoiDelta_m = 1754;
  optional bool highSideDelimiterRequired = 2753;
  optional float curbObjectEvaluationRoiDepthDelta_m = 15294138;
  optional float parallelLineAllowedDeviation_rad = 2580;
  optional bool enlargeDynObj = 1630;
  optional float dynObjMaxVel_mps = 1975;
  optional float dynObjMaxPreviewTime_s = 2363;
  optional uint32 dynObjMinExistenceProb_perc = 79;
  optional bool doExactShiftVectorToEgoCollisionCheck = 1631;
  optional float minSlotOpeningOffsetSideBlowUp_m = 552;
  optional float parallelSlotLineTooLongPenalty = 3503;
  optional bool enableSlotLengthAdaptionToAdjacentObjects = 3682;
  optional bool enableSlotLengthAdaptionToAdjacentLines = 1476;
  optional bool allowSlotExtensionOverLinesToMinOpening = 2382;
  optional float maxAllowedSlotExtensionOverLinesToMinOpening_m = 905;
  optional bool allowShrinkOnLinesDespiteSideObjects = 2840;
  optional bool preferShiftToTopOnCurbObjects = 2011;
  optional float sideShiftPenaltyForCurbObjects = 2073;
  optional float preferShiftToTopRoiYBorderOffset_m = 3844;
  optional bool enableSlotFallback = 494;
  optional bool enableUnspecifiedShift = 1788;
  optional float penaltyForShrinkToMinDim = 551;
  optional float shrinkPenaltyForClassifyingObjectAsDynamic = 2700;
  optional float shrinkPenaltyForShiftBelowMin = 3594;
  optional float shrinkPenaltyForExceedingGivenLimits = 1354;
  optional float sideAndCurbDelimiterRoiExtension_m = 4044;
  optional float sideAndCurbDelimiterRoiBottomShift_m = 1910;
  optional float typicalOrientationOfAngledSlot_rad = 4023;
  optional bool doLineCategorization = 3392;
  optional float smallSlotOpeningPenalty = 2479;
  optional float lcAngleCostFactor = 3988;
  optional float lcLineDistCostFactor = 2853;
  optional float lcLineLengthCostFactor = 3908;
  optional bool doCurbOnlyLineCategorization = 2120;
  optional float lcCurbOnlyAngleDiff_rad = 2739;
  optional float lcCurbOnlySpatialDiff_m = 3440;
  optional bool ignoreLinesForSandwichSlots = 1548;
  optional bool lcNoCurbLineOptimizationIfNoCurbLc = 3610;
  optional float sensingRange_m = 3054;
  optional float slotPenetrationDepth_m = 1832;
  optional bool enableLeftSideScanning = 3159;
  optional bool enableRightSideScanning = 507;
  optional float sideRoiYStart_m = 93;
  optional float sideRoiYEnd_m = 235;
  optional float sideRoiXFront_m = 3982;
  optional float sideRoiXBack_m = 784;
  optional bool enableFrontScanning = 1368;
  optional float frontRoiYSide_m = 1875;
  optional float frontRoiXStart_m = 1415;
  optional float frontRoiXEnd_m = 3084;
  optional bool allowNarrowSlotsScan = 1727;
  optional float lineOpeningDelimiterMaxRoadProtrusion_m = 3234;
  optional float lineOpeningDelimiterToCurbProjectionFactor = 1257;
  optional bool enableCnnWheelStoppers = 3141;
  optional bool enableCnnWheelStopperStatObjVerification = 1382;
  optional float allowedWsPosOutsideSlot_m = 913;
  optional bool wsStatObjIgnoreEvaluation = 3340;
  optional float allowedDistToExistingWsWithWlSuppression_m = 1590;
  optional float allowedDistToExistingWsWithoutWlSuppression_m = 1249;
  optional uint32 integrationMessagesLevel_nu = 757;
  optional uint32 integrationMessagesComponent_nu = 610;
  optional float collFunctionRoiWidthDelta_m = 974;
  optional float collFunctionRoiLengthDelta_m = 919;
  optional float barrierDelimiterWidth_m = 3039;
  optional float minBarrierDelimiterLength_m = 1558;
  optional float minBarrierPointOverhang_m = 90;
  optional float delZoneRoadMaxRelToVehWidthPar_nu = 1533;
  optional float delZoneRoadMaxRelToVehLengthNonPar_nu = 3847;
  optional float delZoneRoadFactorPar_nu = 2770;
  optional float delZoneRoadFactorNonPar_nu = 1967;
  optional float delZoneRoadMinDistNonPar_m = 976;
  optional float delZoneRoadMinDistPar_m = 1695;
  optional float delZoneCurbMaxRelToVehWidthPar_nu = 1221;
  optional float delZoneCurbMaxRelToVehLengthNonPar_nu = 1463;
  optional float delZoneCurbFactorPar_nu = 469;
  optional float delZoneCurbFactorNonPar_nu = 1442;
  optional float delZoneLeftRightMaxRelToVehLengthPar_nu = 236;
  optional float delZoneLeftRightFactorNonPar_nu = 1139;
  optional float delZoneLeftRightMaxRelToVehWidthNonPar_nu = 3109;
  optional float delZoneLeftRightFactorPar_nu = 1290;
  optional float thDelimiterDist_m = 1609;
  optional float insideZoneDist_m = 1458;
  optional float minRequiredDelimiterProjectionRatio_nu = 1046;
  optional bool enableInsideObjectPenetrationDepth = 1300;
  optional float insideObjectMaxProjectionLength_m = 3865;
  optional bool vlProjectOntoBoxIfFailed = 1532;
  optional float vlMaxTotalAngle_rad = 2683;
  optional float vlMaxNextEdgeAngle_rad = 3965;
  optional float vlMinVirtualLineLengthPerpSide_m = 1326;
  optional float vlMinVirtualLineLengthParSide_m = 372;
  optional float vlMinVirtualLineLengthCurb_m = 3337;
  optional float vlMinVirtualLineLengthRoad_m = 514;
  optional bool vlDoRoadInsideOptimization = 739;
  optional bool vlUseRoadFacingForNonParallelSlots = 4010;
  optional float vlMinLengthStartDirectionSq_m = 2860;
  optional float vlInsideLargerThanRoadFactor = 718;
  optional bool vlUseMaxAngleToParkingBoxEdge = 522962;
  optional float vlMaxAngleToParkingBoxEdge_rad = 3851;
  optional bool slotExpansion = 3436;
  optional bool slotExpansionOnLines = 3304;
  optional uint32 slotExpFrameCounterStable_nu = 3095;
  optional float slotExpMaxAngleDiff_rad = 11519704;
  optional float slotExpMaxTriangleExpansion_m = 2427;
  optional float slotExpMinTriangleExpansion_rad = 3099;
  optional float slotExpansionSideRoiWidth_m = 1245;
  optional float relevantObjectMinBoxSide_m = 897;
  optional bool doObjectInflation = 477;
  optional bool useCovMatrixInflation = 957;
  optional float inflationSafetyDistanceDefault_m = 4034;
  optional float inflationSafetyDistanceParkOut_m = 3473;
  optional float ncSplitMaxSkippableNCAreaPerStep_m2 = 2186;
  optional bool ncSplitUseMostXStartIdx = 622;
  optional bool ncSplitOn = 2843;
  optional bool doObjectClustering = 1052;
  optional float ocPerpMaxDistanceSide_m = 1587;
  optional float ocPerpMaxDistanceCurb_m = 2664;
  optional float ocPerpendicularMaxDistanceXForCurbSideClustering_m = 2200;
  optional float ocParallelMaxDistanceXForCurbSideClustering_m = 2605;
  optional float ocAngMaxDistanceCurb_m = 1147;
  optional float ocPrimZonePerpSideOpening_m = 3357;
  optional float ocPrimZoneAngSideOpening_m = 3788;
  optional float ocPrimZoneParSideOpening_m = 2563;
  optional float ocPrimZoneCurbBelowSlot_m = 1229;
  optional float ocPrimZonePerpCurbIntoSlot_m = 1911;
  optional float ocPrimZoneAngCurbIntoSlot_m = 3433;
  optional float ocPrimZoneParCurbIntoSlot_m = 340;
  optional float ocPrimZonePerpSideToRoad_m = 2160;
  optional float ocPrimZoneParSideToRoad_m = 3020;
  optional float ocSecZonePerpSideToSide_m = 243;
  optional float ocSecZonePerpSideToSlot_m = 2536;
  optional float ocSecZonePerpSideToRoad_m = 931;
  optional float ocSecZonePerpSideToCurb_m = 3240;
  optional float ocSecZonePerpCurbToSide_m = 2005;
  optional float ocSecZonePerpCurbToRoad_m = 1157;
  optional float ocSecZonePerpCurbToCurb_m = 2958;
  optional float ocSecZoneAngSideToSide_m = 3488;
  optional float ocSecZoneAngSideToSlot_m = 1211;
  optional float ocSecZoneAngSideToRoad_m = 3824;
  optional float ocSecZoneAngSideToCurb_m = 8701776;
  optional float ocSecZoneAngCurbToSide_m = 2694;
  optional float ocSecZoneAngCurbToRoad_m = 2518;
  optional float ocSecZoneAngCurbToCurb_m = 1757;
  optional float ocSecZoneParSideToSide_m = 193;
  optional float ocSecZoneParSideToSlot_m = 2522;
  optional float ocSecZoneParSideToRoad_m = 1493409;
  optional float ocSecZoneParSideToCurb_m = 3226;
  optional float ocSecZoneParCurbToSide_m = 2023;
  optional float ocSecZoneParCurbToRoad_m = 1207;
  optional float ocSecZoneParCurbToCurb_m = 3004;
  optional float outsideInAllowedOverlap_m = 1371;
  optional float sideAllowedOverlap_m = 3100;
  optional bool useAreaCriteria = 14368221;
  optional float angularCurbRoadAreaFactor = 3119;
  optional float prohibitionZoneRelativeLength = 1829;
  optional bool useLinearOverlapDropOff = 1707;
  optional float vlInsideLargeEnough_m = 1425;
  optional float vlMaxAllowedRoadInsideAngleDiff_rad = 1704;
  optional bool teCalculateRoadSideExpansion = 19;
  optional bool delZonesUseHighComplexityGetScore = 16563677;
  optional bool cnnSlotsEnableSiSlotDetectionVerification = 3857;
  optional bool cnnCompareSlotTypeFPSuppression = 2272;
  optional uint32 cnnSlotsMinScenarioConfidenceTheshold = 566;
  optional bool cnnSlotsPerpendicularValidatesAngular = 1447;
  optional float cnnSlotsValidationMaxOpeningAngleDiff_rad = 1982;
  optional bool cnnSlotsEnableCnnSlotPrototypes = 2136;
  optional bool allowNakedCnnSlots = 835;
  optional float cnnSlotBlowUpLimitParSide_m = 991;
  optional float cnnSlotBlowUpLimitParCurb_m = 3972;
  optional float cnnSlotRoadAlignmentLimitPar_m = 3835;
  optional float cnnSlotBlowUpLimitNonParSide_m = 2089;
  optional float cnnSlotBlowUpLimitNonParCurb_m = 1138;
  optional float cnnSlotRoadAlignmentLimitNonPar_m = 849;
  optional float cnnOrientationErrorCostFunctionFactor = 3120;
  optional bool cnnSlotsAllowSiSlotOverride = 3762;
  optional float slotScoringMaxParLineLength_m = 2287;
  optional float slotScoringMinParWingLength_m = 846;
  optional float slotScoringMinNonParSideLength_m = 1986;
  optional float slotScoringMaxVlOrLineAngleDiff_rad = 2293;
  optional float cnnSlotsMinValidationOverlap_m = 1287;
  optional float cnnSlotsMinInvalidationOverlap_m = 4038;
  optional float minDistGapCnnSlotVsTrackedSlot_m = 1930;
  optional float cnnSlotOdSlotEnlargement_m = 156;
  optional float memParkExtendSlot_m = 3954;
  optional float leftRightMemParkOffsetX_m = 629;
  optional float leftRightMemParkGapY_m = 2918;
  optional float frontMemParkGap_m = 3217;
  optional float rearMemParkGap_m = 2241;
  optional float maxMemParkRotAdj_rad = 12895248;
  optional float maxMemParkLinearAdj_m = 91;
  optional bool preapplyRoadsideExtension = 2224;
  optional float safetyMarginDynObjEnlargingPed_m = 3035;
  optional float safetyMarginDynObjEnlargingCar_m = 2657;
  optional uint32 minHeightConfDeltaStaticObj = 2213;
  optional float developerGenericFloat0 = 152;
  optional float developerGenericFloat1 = 185;
  optional float developerGenericFloat2 = 218;
  optional float developerGenericFloat3 = 251;
  optional float developerGenericFloat4 = 4286347;
  optional float developerGenericFloat5 = 61;
}

message SiParams_array_port{
   repeated pb.si.si_params.SiParams data = 4025;
}
