
syntax = "proto2";

import "si/object_trend.proto";
import "si/static_obj_shape_serializable.proto";
import "si/static_obj_heigth_type.proto";

package pb.si.static_object_serializable;

message StaticObjectSerializable{
  optional uint32 refObjID_nu = 3288;
  optional uint32 existenceProb_perc = 2424;
  optional uint32 objAgeInCycles_nu = 843;
  optional uint32 objMeasLastUpdateInCycles_nu = 999;
  optional uint32 objTrendLastUpdateInCycles_nu = 1522;
  optional pb.si.object_trend.ObjectTrend objTrend_nu = 3771;
  optional bool readFromNVRAM_nu = 1239;
  optional pb.si.static_obj_shape_serializable.StaticObjShapeSerializable objShape_m = 1045;
  optional pb.si.static_obj_heigth_type.StaticObjHeigthType objHeightClass_nu = 3534;
  optional uint32 objHeightClassConfidence_perc = 3507;
}

message StaticObjectSerializable_array_port{
   repeated pb.si.static_object_serializable.StaticObjectSerializable data = 1307;
}
