
syntax = "proto2";

import "eco/signal_header.proto";
import "us_em/dynamic_object_serializable.proto";
import "us_em/static_object_serializable.proto";

package pb.us_em.us_env_model_port;

message UsEnvModelPort{
  optional uint32 uiVersionNumber = 2124;
  optional pb.eco.signal_header.SignalHeader sSigHeader = 1033;
  optional uint32 numberOfStaticObjects_u8 = 186;
  optional uint32 numberOfDynamicObjects_u8 = 3825;
  optional uint32 firstStatObjOutDetZoneIdx_u8 = 2215;
  optional uint32 firstDynObjOutDetZoneIdx_u8 = 1726;
  repeated pb.us_em.dynamic_object_serializable.DynamicObjectSerializable dynamicObjects = 482;
  repeated pb.us_em.static_object_serializable.StaticObjectSerializable staticObjects = 3098;
}

message UsEnvModelPort_array_port{
   repeated pb.us_em.us_env_model_port.UsEnvModelPort data = 3989;
}
